// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render a select input with options 1`] = `
<DocumentFragment>
  <div
    class="InputGroup-sc-1obbdqe-3 bgPpWR"
  >
    <select
      class="overflow-hidden py-3 px-4 pr-12 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
      data-testid="Select"
    >
      <option
        data-testid="select-option"
        selected=""
        value="1"
      >
        Option 1
      </option>
      <option
        data-testid="select-option"
        value="2"
      >
        Option 2
      </option>
    </select>
    <div
      class="w-12 text-lg pointer-events-none InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonEnd-sc-1obbdqe-2 bsvVEG isvHuV text-theme-secondary-text"
    >
      <div
        class="sc-bdfBwQ fPrsah"
        height="1em"
        width="1em"
      >
        <svg>
          chevron-down.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select should render a select input with placeholder 1`] = `
<DocumentFragment>
  <div
    class="InputGroup-sc-1obbdqe-3 bgPpWR"
  >
    <select
      class="overflow-hidden py-3 px-4 pr-12 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
      data-testid="Select"
    >
      <option
        disabled=""
        selected=""
        value=""
      >
        Select option
      </option>
    </select>
    <div
      class="w-12 text-lg pointer-events-none InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonEnd-sc-1obbdqe-2 bsvVEG isvHuV text-theme-secondary-text"
    >
      <div
        class="sc-bdfBwQ fPrsah"
        height="1em"
        width="1em"
      >
        <svg>
          chevron-down.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
